--- a/pages/child_friendly.html
+++ b/pages/child_friendly.html
@@ -124,7 +124,7 @@
 			<li>Sources text</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="torture.html">Torture</a> - 
+		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="torture.html">Torture</a> - 
 		<hr>
 		<h5><a href="#top">Back to Top</a></h5>
 	</div>
