--- a/pages/interview.html
+++ b/pages/interview.html
@@ -9,27 +9,66 @@
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </header>
 <body>
 	<h1 class="text-center my-3">Interview</h1>
 	<p class="text-center my-3">These games involve interviewing a member or members of the audience for information and then making a scene or set of scenes from that information.</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-			</ul>
-		</div>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<a href="#dayInTheLife">Day in the Life</a>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
 <div class="m-5">
+	<!-- ---------- DAY IN THE LIFE ---------- -->
+	<div class="game-box p-2" id="dayInTheLife">
+		<h2>Day in the Life</h2>
+		<hr>
+		<h3>Instructions</h3>
+		<ul>
+			<li>An audience volunteer is selected to tell the story of their day, or alternatively you could ask for a specific type of story.</li>
+			<ul>
+				<li>Best day of your life</li>
+				<li>For a theme show: your craziest New Years Eve story</li>
+			</ul>
+			<li>The interviewer or backline should feel free to ask clarifying questions or to ask for more details if the story teller is a little more timid.</li>
+			<li>After the interview, the ensemble will perform this persons day.</li>
+			<li>The goal is not to recreate the story as is, the goal is to use the characters, ideas, situations, and general structure from the story to create a fun scene.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>The interview section will force improvisers to listen intently.</li>
+			<li>This is a good exercise to teach the basics of premise based long form, like listening for specifcs in an opening and bringing them into a scene.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Members from the backline should feel free to become inanimate objects in sections of the scene where there are no secondary characters present.</li>
+			<li>Don't be overly indulgent in the interview section, we don't want to alienate the audience member by constantly interupting them for jokes. The improvisers can be funny during the scene.</li>
+			<ul>
+				<li>It will also make the whole setup and scene take a really long time.</li>
+			</ul>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="exercises.html">Exercises</a> - <a href="interview.html">Interview</a> - <a href="listening.html">Listening</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<hr>
+		<h5><a href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
 </div>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </footer>
 </html>
