--- a/pages/song_formats.html
+++ b/pages/song_formats.html
@@ -9,27 +9,62 @@
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </header>
 <body>
 	<h1 class="text-center my-3">Song Formats</h1>
-	<p class="text-center my-3">These are verious improvised song formats.</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-			</ul>
-		</div>
+	<p class="text-center my-3">These are various improvised song formats.</p>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<a href="#taglineSong">Tagline Song</a>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
 <div class="m-5">
+	<!-- ---------- TAGLINE SONG ---------- -->
+	<div class="game-box p-2" id="taglineSong">
+		<h2>Tagline Song</h2>
+		<hr>
+		<h3>Format</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="musical.html">Musical</a> - <a href="song_formats.html">Song Format</a> - 
+		<hr>
+		<h5><a href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
 </div>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </footer>
 </html>
