--- a/pages/exercises.html
+++ b/pages/exercises.html
@@ -46,6 +46,9 @@
 				<a href="#characterMatching">Character Matching</a>
 			</li>
 			<li>
+				<a href="#dayInTheLife">Day in the Life</a>
+			</li>
+			<li>
 				<a href="#mindMeld">Mind Meld</a>
 			</li>
 			<li>
@@ -82,7 +85,7 @@
 			<li>How to be the Greatest Improviser on Earth by Will Hines - p. 22</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="scene.html">Scenework</a> - 
+		<a href="exercises.html">Exercise</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a href="#top">Back to Top</a></h5>
 	</div>
@@ -126,7 +129,7 @@
 			<li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 302</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a href="#top">Back to Top</a></h5>
 	</div>
@@ -186,7 +189,7 @@
 			<li>Sources text</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a href="#top">Back to Top</a></h5>
 	</div>
@@ -346,6 +349,42 @@
 
 	<hr class="thick-hr">
 
+	<!-- ---------- DAY IN THE LIFE ---------- -->
+	<div class="game-box p-2" id="dayInTheLife">
+		<h2>Day in the Life</h2>
+		<hr>
+		<h3>Instructions</h3>
+		<ul>
+			<li>An audience volunteer is selected to tell the story of their day, or alternatively you could ask for a specific type of story.</li>
+			<ul>
+				<li>Best day of your life</li>
+				<li>For a theme show: your craziest New Years Eve story</li>
+			</ul>
+			<li>The interviewer or backline should feel free to ask clarifying questions or to ask for more details if the story teller is a little more timid.</li>
+			<li>After the interview, the ensemble will perform this persons day.</li>
+			<li>The goal is not to recreate the story as is, the goal is to use the characters, ideas, situations, and general structure from the story to create a fun scene.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>The interview section will force improvisers to listen intently.</li>
+			<li>This is a good exercise to teach the basics of premise based long form, like listening for specifcs in an opening and bringing them into a scene.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Members from the backline should feel free to become inanimate objects in sections of the scene where there are no secondary characters present.</li>
+			<li>Don't be overly indulgent in the interview section, we don't want to alienate the audience member by constantly interupting them for jokes. The improvisers can be funny during the scene.</li>
+			<ul>
+				<li>It will also make the whole setup and scene take a really long time.</li>
+			</ul>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="exercises.html">Exercises</a> - <a href="interview.html">Interview</a> - <a href="listening.html">Listening</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<hr>
+		<h5><a href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
 	<!-- ---------- MIND MELD ---------- -->
 	<div class="game-box p-2" id="mindMeld">
 		<h2>Mind Meld</h2>
@@ -403,7 +442,7 @@
 			<li>Sources text</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="object_work.html">Object Work</a> - <a href="scene.html">Scenework</a> - 
+		<a href="exercises.html">Exercise</a> - <a href="object_work.html">Object Work</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a href="#top">Back to Top</a></h5>
 	</div>
@@ -435,7 +474,7 @@
 			<li>Sources text</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a href="#top">Back to Top</a></h5>
 	</div>
