--- a/pages/listening.html
+++ b/pages/listening.html
@@ -9,167 +9,383 @@
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </header>
 <body>
 	<h1 class="text-center my-3">Listening</h1>
 	<p class="text-center my-3">These games and exercises force players to use and develop good listening skills.</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-				<li>
-					<h5><a href="#adGame">Ad Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#alphabetGame">Alphabet Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#badRap">Bad Rap</a></h5>
-				</li>
-				<li>
-					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
-				</li>
-				<li>
-					<h5><a href="#bigBooty">Big Booty</a></h5>
-				</li>
-				<li>
-					<h5><a href="#bunnyBunny">Bunny Bunny</a></h5>
-				</li>
-				<li>
-					<h5><a href="#mindMeld">Mind Meld</a></h5>
-				</li>
-				<li>
-					<h5><a href="#pillars">Pillars</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#typewriter">Typewriter</a></h5>
-				</li>
-			</ul>
-		</div>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<a href="#adGame">Ad Game</a>
+			</li>
+			<li>
+				<a href="#alphabetGame">Alphabet Game</a>
+			</li>
+			<li>
+				<a href="#badRap">Bad Rap</a>
+			</li>
+			<li>
+				<a href="#bigBooty">Big Booty</a>
+			</li>
+			<li>
+				<a href="#bunnyBunny">Bunny Bunny</a>
+			</li>
+			<li>
+				<a href="#dayInTheLife">Day in the Life</a>
+			</li>
+			<li>
+				<a href="#mindMeld">Mind Meld</a>
+			</li>
+			<li>
+				<a href="#pillars">Pillars</a>
+			</li>
+			<li>
+				<a href="#sentenceGame">Sentence Game</a>
+			</li>
+			<li>
+				<a href="#typewriter">Typewriter</a>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
 <div class="m-5">
 	<!-- ---------- AD GAME ---------- -->
 	<div class="game-box p-2" id="adGame">
-		<h3>Ad Game</h3>
+		<h2>Ad Game</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<h3>Description</h3>
+		<ul>
+			<li>An ensemble member comes up with an unusual product by taking an ordinary item and giving it an unusual trait</li>
+			<ul>
+				<li><em>A car that changes color based on it's surroundings.</em></li>
+				<li><em>A refrigerator that is also a radio.</em></li>
+			</ul>
+			<li>The ensemble works together to create an advertising campaign for an unusual product.</li>
+			<li>They will come up with a name, slogan, target demographic, celebrity spokesperson, jingle, etc...</li>
+			<li>All the elements of the product should complement each other.</li>
+			<li>No matter the idea, the entire group must support and yes and it.</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li><strong>Player 1: "We could call it The Chameleon!"</strong></li>
+			<li><strong>Player 2: "Yeah! We could have Meryl Streep as the spokesperson. She could talk about how she disappears into her roles like this car disappears into it's surroundings."</strong></li>
+			<li><strong>Player 3: "Yeah! She could start off the commercial as Julia Child and then finish as Margaret Thatcher."</strong></li>
+			<li><strong>Player 4: "We could sell it to criminals! If they're being chased by the police, they can blend into their surroundings to hide."</strong></li>
+			<li><strong>Player 3: "We could take helicopter footage of a police chase and suddenly, the car disappears, blending into the highway!"</strong></li>
+			<li><strong>Player 2: "When you don't want to be seen, this is your machine."</strong></li>
+			<li><strong>Player 4: "Great slogan! *Starts to sing* This car's named after a lizard that can hide, buy this car and camouflage your ride!"</strong></li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+		<p>Used as an exercise, the ensemble will...</p>
+			<li>Practice performing verbal all-at-once group games.</li>
+			<li>Strengthen their ability to listen, yes and, and utilize give and take.</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 302</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- ALPHABET GAME ---------- -->
 	<div class="game-box p-2" id="alphabetGame">
-		<h3>Alphabet Game</h3>
+		<h2>Alphabet Game</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- BAD RAP ---------- -->
 	<div class="game-box p-2" id="badRap">
-		<h3>Bad Rap</h3>
+		<h2>Bad Rap</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- BEASTIE BOYS ---------- -->
-	<div class="game-box p-2" id="beastieBoys">
-		<h3>Beastie Boys</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- BIG BOOTY ---------- -->
 	<div class="game-box p-2" id="bigBooty">
-		<h3>Big Booty</h3>
+		<h2>Big Booty</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Part</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- BUNNY BUNNY ---------- -->
 	<div class="game-box p-2" id="bunnyBunny">
-		<h3>Bunny Bunny</h3>
+		<h2>Bunny Bunny</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- DAY IN THE LIFE ---------- -->
+	<div class="game-box p-2" id="dayInTheLife">
+		<h2>Day in the Life</h2>
+		<hr>
+		<h3>Instructions</h3>
+		<ul>
+			<li>An audience volunteer is selected to tell the story of their day, or alternatively you could ask for a specific type of story.</li>
+			<ul>
+				<li>Best day of your life</li>
+				<li>For a theme show: your craziest New Years Eve story</li>
+			</ul>
+			<li>The interviewer or backline should feel free to ask clarifying questions or to ask for more details if the story teller is a little more timid.</li>
+			<li>After the interview, the ensemble will perform this persons day.</li>
+			<li>The goal is not to recreate the story as is, the goal is to use the characters, ideas, situations, and general structure from the story to create a fun scene.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>The interview section will force improvisers to listen intently.</li>
+			<li>This is a good exercise to teach the basics of premise based long form, like listening for specifcs in an opening and bringing them into a scene.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Members from the backline should feel free to become inanimate objects in sections of the scene where there are no secondary characters present.</li>
+			<li>Don't be overly indulgent in the interview section, we don't want to alienate the audience member by constantly interupting them for jokes. The improvisers can be funny during the scene.</li>
+			<ul>
+				<li>It will also make the whole setup and scene take a really long time.</li>
+			</ul>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="exercises.html">Exercises</a> - <a href="interview.html">Interview</a> - <a href="listening.html">Listening</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<hr>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- MIND MELD ---------- -->
 	<div class="game-box p-2" id="mindMeld">
-		<h3>Mind Meld</h3>
+		<h2>Mind Meld</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- PILLARS ---------- -->
 	<div class="game-box p-2" id="pillars">
-		<h3>Pillars</h3>
+		<h2>Pillars</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- SENTENCE GAME ---------- -->
 	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
+		<h2>Sentence Game</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="sentences.html">Sentences</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- TYPEWRITER ---------- -->
 	<div class="game-box p-2" id="typewriter">
-		<h3>Typewriter</h3>
+		<h2>Typewriter</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -178,8 +394,8 @@ description		<h6>Tags</h6>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </footer>
 </html>
