--- a/pages/party.html
+++ b/pages/party.html
@@ -3,98 +3,194 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Party</title>
+	<title>Party Games</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </header>
 <body>
-	<h1 class="text-center my-3">Party</h1>
+	<h1 class="text-center my-3">Party Games</h1>
 	<p class="text-center my-3">These games are fun to play in large groups.</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-				<li>
-					<h5><a href="#alienTigerCow">Alien Tiger Cow</a></h5>
-				</li>
-				<li>
-					<h5><a href="#badRap">Bad Rap</a></h5>
-				</li>
-				<li>
-					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
-				</li>
-				<li>
-					<h5><a href="#bunnyBunny">Bunny Bunny</a></h5>
-				</li>
-				<li>
-					<h5><a href="#mindMeld">Mind Meld</a></h5>
-				</li>
-			</ul>
-		</div>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<a href="#alienTigerCow">Alien Tiger Cow</a>
+			</li>
+			<li>
+				<a href="#badRap">Bad Rap</a>
+			</li>
+			<li>
+				<a href="#bigBooty">Big Booty</a>
+			</li>
+			<li>
+				<a href="#bunnyBunny">Bunny Bunny</a>
+			</li>
+			<li>
+				<a href="#mindMeld">Mind Meld</a>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
 <div class="m-5">
 	<!-- ---------- ALIEN TIGER COW ---------- -->
 	<div class="game-box p-2" id="alienTigerCow">
-		<h3>Alien Tiger Cow</h3>
+		<h2>Alien Tiger Cow</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - 
+		<h3>Instructions</h3>
+		<ul>
+			<li>The group forms a circle.</li>
+			<li>On the count of three all players strike a pose and make a noise as an alien, a tiger, or a cow.</li>
+		<ul>
+				<li>Alien: Hold your two index fingers up to your head like antennae and say "Bleep blorp!"</li>
+				<li>Tiger: Throw your hands out like your clawing and roar.</li>
+				<li>Cow: Hold your hands up to you stomach with your fingers sticking out like udders and say "Mooo!"</li>
+		</ul>
+			<li>Then repeat!</li>
+			<li>You can play with the intention of everyone trying to land on the same pose or eliminate the minority group each time until there is only one or two players left.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>This is a fun easy way to warm up. Great for children or beginners.</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- BAD RAP ---------- -->
 	<div class="game-box p-2" id="badRap">
-		<h3>Bad Rap</h3>
+		<h2>Bad Rap</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
-	<!-- ---------- BEASTIE BOYS ---------- -->
-	<div class="game-box p-2" id="beastieBoys">
-		<h3>Beastie Boys</h3>
+	<!-- ---------- BIG BOOTY ---------- -->
+	<div class="game-box p-2" id="bigBooty">
+		<h2>Big Booty</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- BUNNY BUNNY ---------- -->
 	<div class="game-box p-2" id="bunnyBunny">
-		<h3>Bunny Bunny</h3>
+		<h2>Bunny Bunny</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- MIND MELD ---------- -->
 	<div class="game-box p-2" id="mindMeld">
-		<h3>Mind Meld</h3>
+		<h2>Mind Meld</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -103,8 +199,8 @@ description		<h6>Tags</h6>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </footer>
 </html>
