--- a/pages/pun.html
+++ b/pages/pun.html
@@ -3,38 +3,56 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pun</title>
+	<title>Pun Games</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </header>
 <body>
-	<h1 class="text-center my-3">Pun</h1>
+	<h1 class="text-center my-3">Pun Games</h1>
 	<p class="text-center my-3">These games involve coming up with jokes and puns from the backline one at a time based of a simple suggestion.</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-				<li>
-					<h5><a href="#185">185</a></h5>
-				</li>
-			</ul>
-		</div>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<a href="#185">185</a>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
 <div class="m-5">
 	<!-- ---------- 185 ---------- -->
 	<div class="game-box p-2" id="185">
-		<h3>185</h3>
+		<h2>185</h2>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Players get a suggestion and one at a time step forward and deliver a joke or pun with the format below.</li></ul><hr><p><strong>Example:</strong><br><ul><li>Suggestion: Banana<br>185 bananas walk into a bar.<br>The bartender says, we don't serve bananas here.<br>The 185 bananas say, what? are we too unappealing for you?</li><li>Alternate version:<br>185 bananas walk into a bar.<br>The bartender says, we don't serve bananas here.<br>The 185 bananas say, why not?<br> and the bartender says, you're too unappealing.</li></ul><hr>		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Players get a suggestion and one at a time step forward and deliver a joke or pun with the format below.</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<p>Suggestion: Banana</p>
+		<ul>
+			<li>185 bananas walk into a bar.</li>
+			<li>The bartender says, we don't serve bananas here.</li>
+			<li>The 185 bananas say, what? are we too unappealing for you?</li>
+		</ul>
+		<p>Alternate Version:</p>
+		<ul>
+			<li>185 bananas walk into a bar.</li>
+			<li>The bartender says, we don't serve bananas here.</li>
+			<li>The 185 bananas say, why not?</li>
+			<li>The bartender says, you're too unappealing.</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -43,8 +61,8 @@
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </footer>
 </html>
