--- a/pages/sentences.html
+++ b/pages/sentences.html
@@ -3,323 +3,58 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Sentences</title>
+	<title>Sentence Games</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </header>
 <body>
-	<h1 class="text-center my-3">Sentences</h1>
+	<h1 class="text-center my-3">Sentence Games</h1>
 	<p class="text-center my-3">These games invole reading dialogue provided by the audience on strips of paper before the show.</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
-				</li>
-			</ul>
-		</div>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<a href="#sentenceGame">Sentence Game</a>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
 <div class="m-5">
 	<!-- ---------- SENTENCE GAME ---------- -->
 	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
+		<h2>Sentence Game</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="sentences.html">Sentences</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -328,8 +63,8 @@ description		<h6>Tags</h6>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </footer>
 </html>
